Fix homepage and repository

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "holiday"
 description = "A rust library for defining and iterating over annually repeating dates and holidays."
-version = "0.1.0"
+version = "0.1.1"
 authors = ["Ryan O'Beirne <ryanobeirne@ryanobeirne.com>"]
 edition = "2018"
 license = "MIT"
 documentation = "https://docs.rs/holiday"
-homepage = "https://gitlab.com/ryanobeirne/deltae"
-repository = "https://gitlab.com/ryanobeirne/deltae.git"
+homepage = "https://gitlab.com/ryanobeirne/holiday"
+repository = "https://gitlab.com/ryanobeirne/holiday.git"
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
